--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wesleytodd/create-package-json"
+    "url": https://github.com/s1mplyw1cked/open-pixel-art.git
   },
   "keywords": [
     "scaffold",
