--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": 
+    "url": "https://github.com/s1mplyw1cked/open-pixel-art.git"
   },
   "keywords": [],
   "author": ""
   },
   "license": "ICS",
-  "homepage": "https;
+  "homepage": "https:
   
 }
