--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "author": ""
   },
   "license": "ICS",
-  "homepage": "https:
+  "homepage": "https://github.com/s1mplyw1cked/open-pixel-art"
   
 }
