--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "create-package-json",
+  "name": "package-json",
   "version": "1.0.0",
   "description": "",
-  "main": "",
-  "type": "",
   "bin": {},
   "scripts": {}
 },
