--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "version": "1.0.0",
   "scripts": {
-    "start": "node package.json"
+    "start": "start http://localhost:8081 & node bin/www"
   },
   "repository": {
     "type": "git",
