--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "version": "1.0.0",
   "scripts": {
-    "start": "node package.json"
+    "start": "start"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/s1mplyw1cked/open-pixel-art.git"
+    "url": "https://github.com/s1mplyw1cked/open-pixel-art"
   },
   "keywords": [],
   "author": "",
