--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "version": "1.0.0",
   "scripts": {
+    "start":""
     "start-server": "npm start htttp://Localhost:8080"
   },
   "repository": {
